--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web_Git.loader.js";
+      var loaderUrl = buildUrl + "/Curesee_Test_Server.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web_Git.data",
-        frameworkUrl: buildUrl + "/Web_Git.framework.js",
-        codeUrl: buildUrl + "/Web_Git.wasm",
+        dataUrl: buildUrl + "/Curesee_Test_Server.data",
+        frameworkUrl: buildUrl + "/Curesee_Test_Server.framework.js",
+        codeUrl: buildUrl + "/Curesee_Test_Server.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "CureSee",
         productName: "Cure See",
